Move Govern planning to Threat Insights

--- a/development/sec/govern/security-policies/index.html.md.erb
+++ b/development/sec/govern/security-policies/index.html.md.erb
@@ -27,7 +27,7 @@ We are responsible for developing solutions to give customers the functionality 
 We use our [Security Policies Priorities](/direction/govern/security_policies/security_policy_management/#priorities) list in our direction page to track what we are doing, and what order to do it in.  Each initiative includes these fields:
 
 1. Name - Description and link to the epic
-1. BE DRI / FE DRI - indicates the backend and frontend [DRIs](/handbook/engineering/development/sec/govern/planning/#epic-engineering-dri) who will be actively involved. 
+1. BE DRI / FE DRI - indicates the backend and frontend [DRIs](/handbook/engineering/development/sec/govern/sp-ti-planning.html#epic-engineering-dri) who will be actively involved.
 1. Size
 1. Target Release
 
@@ -46,7 +46,8 @@ Complete items are removed from the table once the code is in production without
 ### Workflow
 
 The Security Policies group largely follows GitLab's [Product Development Flow](/handbook/product-development-flow/).
-Additional information about how we operate can be found on the [Govern Planning page](/handbook/engineering/development/sec/govern/planning/).
+
+Additional information about how we operate can be found on the [Planning page](/handbook/engineering/development/sec/govern/sp-ti-planning.html).
 
 #### MR Reviews
 
