--- a/development/sec/govern/threat-insights/index.html.md.erb
+++ b/development/sec/govern/threat-insights/index.html.md.erb
@@ -41,7 +41,7 @@ We use our [Threat Insights Priorities](https://gitlab.com/groups/gitlab-org/-/e
 ### Workflow
 
 The Threat Insights group largely follows GitLab's [Product Development Flow](/handbook/product-development-flow/).
-Additional information about how we operate can be found on the [Govern Planning page](/handbook/engineering/development/sec/govern/planning/).
+Additional information about how we operate can be found on the [Planning page](/handbook/engineering/development/sec/govern/sp-ti-planning.html).
 
 #### MR Reviews
 
