Remove Epic 112 from Tracking Epics as it is now closed

--- a/infrastructure/team/delivery/index.html.md.erb
+++ b/infrastructure/team/delivery/index.html.md.erb
@@ -216,10 +216,7 @@ Each project should have a project-label applied to all epics and issues to allo
 
 ### Epics
 
-Two tracking epics related to the team mission are:
-
-1. [GitLab.com on Kubernetes](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/112)
-1. [Release Velocity](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/170)
+The [Release Velocity](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/170) epic tracks all work related to the group mission.
 
 Any working epic that the team creates should be directly added as a child to one of these two top level tracking epics.
 
