--- a/people-group/employment-solutions/index.html.md.erb
+++ b/people-group/employment-solutions/index.html.md.erb
@@ -19,7 +19,7 @@ The GitLab team has members in countries and regions all over the world and from
 
 All of our roles are remote, however some roles may carry specific location-based eligibility requirements. Our Talent Acquisition team can help answer any questions applicants may have about location after starting the recruiting process.
 
-In the past GitLab would hire in any country except those we had already determined were not feasible due to certain restrictions. At present we are focussing our hiring in countries where we have [entities](#gitlab-entities) & [PEO's](#peo-professional-employer-organization-employer-of-record-and-not-a-gitlab-entity). 
+In the past GitLab would hire in any country except those we had already determined were not feasible due to certain restrictions. At present we are focussing our hiring in countries where we have [entities](https://about.gitlab.com/handbook/people-group/employment-solutions/#gitlab-entities-and-branches) & [PEO's](https://about.gitlab.com/handbook/people-group/employment-solutions/#peo-professional-employer-organization-employer-of-record-and-not-a-gitlab-entity-or-branch), and that do not carry certain restrictions; more detail can be found in our internal [compensation calculator](https://comp-calculator.gitlab.net/users/sign_in) under country hiring status. 
 
 Compared with our former approach of hiring contractors in any country and later planning to implement an entity/PEO, we see four instant benefits with this approach:
 
