--- a/quality/quality-engineering/dev-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/dev-qe-team/index.html.md.erb
@@ -33,7 +33,7 @@ Quality Engineering Manager: Ramya Authappan
 | 2    	| Create    	| [Code Review]            	| Jay McCure                                                           	|
 | 3    	| Create    	| [Editor]                 	| Jason Zhang                                                   	    |
 | 4    	| Manage    	| [Authentication and Authorization]                 	| Sanad Liaquat                                                        	|
-| 5    	| Manage    	| [Workspace]              	| Valerie Burton                                                        |
+| 5    	| Manage    	| [Organization]           	| Valerie Burton                                                        |
 | 6    	| Manage    	| [Import]                 	| Andrejs Cunskis                                                      	|
 | 7    	| Manage    	| [Optimize]               	| TBH                                                                  	|
 | 8   	| Plan      	| [Project Management]     	| Désirée Chevalier                                                    	|
@@ -60,7 +60,7 @@ Please find below the relevant projects/epics/issue boards used by various produ
 | 2        | [Code Review]        | Jay McCure                      | [Planning Issue](https://gitlab.com/gitlab-org/create-stage/-/issues/?search=Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Acode%20review&first_page_size=20)                                                       |
 | 3        | [Editor]             | Jason Zhang                     |      [Planning Issue](https://gitlab.com/gitlab-com/create-stage/editor/-/issues/?sort=created_asc&state=all&label_name%5B%5D=Planning%20Issue&first_page_size=20) |
 | 4        | [Authentication and Authorization]        | Sanad Liaquat                   | [Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aauthentication%20and%20authorization&first_page_size=20) |
-| 5        | [Workspace]          | Valerie Burton                  | [Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aworkspace&first_page_size=20)                            |
+| 5        | [Organization]       | Valerie Burton                  | [Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aorganization&first_page_size=20)                            |
 | 6        | [Import]             | Andrejs Cunskis |[Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aimport&first_page_size=20)              |
 | 7        | [Optimize]           | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aoptimize&first_page_size=20)                             |
 | 8       | [Project Management] | Désirée Chevalier               | [Planning Issue](https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproject%20management&first_page_size=20)                                              |
@@ -71,7 +71,7 @@ Please find below the relevant projects/epics/issue boards used by various produ
 
 [Dev section]: /handbook/product/categories/#dev-section
 [Authentication and Authorization]: /handbook/product/categories/#authentication-and-authorization-group
-[Workspace]: /handbook/product/categories/#workspace-group
+[Organization]: /handbook/product/categories/#organization-group
 [Import]: /handbook/product/categories/#import-group
 [Optimize]: /handbook/product/categories/#optimize-group
 [Source Code]: /handbook/product/categories/#source-code-group
