Rename instances of Manage:Workspace to Manage:Organization

--- a/job-families/product/product-manager/index.html.md.erb
+++ b/job-families/product/product-manager/index.html.md.erb
@@ -218,9 +218,9 @@ transition from Product Management to General Management.
 
 ## Specialties
 
-### Manage (Workspace)
+### Manage (Organization)
 
-We're looking for product managers that can help us work on the future of developer tools. Specifically, building out our lovable support for GitLab by driving strategy to help organizations prosper with workspace functionality that enables them to manage Gitlab for their organization.
+We're looking for product managers that can help us work on the future of developer tools. Specifically, building out our lovable support for GitLab by driving strategy to help organizations prosper and by providing functionality that enables them to manage Gitlab for their organization.
 
 #### Requirements 
 
