Add completion status to UX FY23 Direction Items

--- a/product/ux/index.html.md.erb
+++ b/product/ux/index.html.md.erb
@@ -88,38 +88,38 @@ It’s important to note that this list isn’t exhaustive. Instead, we've focus
 
 **Analytical leadership:** Measure and drive design performance with the same rigor as revenues and costs.
 
-| Goal | DRI | Links |
-| ---- | --- | ----- |
-| Establish a repeatable usability benchmarking process | [Ben Leduc-Mills](https://gitlab.com/leducmills)  | [Epic](https://gitlab.com/groups/gitlab-org/-/epics/7373)  |
+| Goal | DRI | Links | Completion Status |
+| ---- | --- | ----- | ----------------- |
+| Establish a repeatable usability benchmarking process | [Ben Leduc-Mills](https://gitlab.com/leducmills)  | [Epic](https://gitlab.com/groups/gitlab-org/-/epics/7373)  | Complete |
 
 **Cross-functional talent:** Make user-centric design everyone’s responsibility.
 
-| Goal | DRI | Links |
-| ---- | --- | ----- |
-| Improve product usability and docs by engaging Technical Writers earlier in the design/development process |  [Susan Tacker](https://gitlab.com/susantacker)   |   [Best practices identified by research](https://gitlab.com/gitlab-org/technical-writing/-/issues/596)    |
-| Make documentation easier to find and read based on UXR feedback and industry-standard approaches | [Susan Tacker](https://gitlab.com/susantacker)   |  [Epic](https://gitlab.com/groups/gitlab-org/-/epics/4602)    |
-| Better support cross-stage work by increasing end-to-end product knowledge of Product Design Managers |  [Rayana Verissimo](https://gitlab.com/rayana)   |       |
-| Fully participate in the cross-functional prioritization process |  [Christie Lenneville](https://gitlab.com/clenneville)   | [Q3 OKR](https://gitlab.com/gitlab-org/gitlab-design/-/issues/2041) |
+| Goal | DRI | Links | Completion Status |
+| ---- | --- | ----- | ----------------- |
+| Improve product usability and docs by engaging Technical Writers earlier in the design/development process |  [Susan Tacker](https://gitlab.com/susantacker)   |   [Best practices identified by research](https://gitlab.com/gitlab-org/technical-writing/-/issues/596)    | Complete |
+| Make documentation easier to find and read based on UXR feedback and industry-standard approaches | [Susan Tacker](https://gitlab.com/susantacker)   |  [Epic](https://gitlab.com/groups/gitlab-org/-/epics/4602)    | Ongoing |
+| Better support cross-stage work by increasing end-to-end product knowledge of Product Design Managers |  [Rayana Verissimo](https://gitlab.com/rayana)   |       | Not prioritized |
+| Fully participate in the cross-functional prioritization process |  [Christie Lenneville](https://gitlab.com/clenneville)   | [Q3 OKR](https://gitlab.com/gitlab-org/gitlab-design/-/issues/2041) | Complete |
 
 **Continuous iteration:** De-risk development through continual listening, testing, and iterating with end users.
 
-| Goal | DRI | Links |
-| ---- | --- | ----- |
-| Improve product experience by implementing Actionable Insights | [Lauren Evans](https://gitlab.com/laurenevans)  |  [Epic](https://gitlab.com/groups/gitlab-org/-/epics/7367)    |
-| Build UXR subject matter expertise through a Foundational Research Framework | [Will Leidheiser](https://gitlab.com/wleidheiser) |  [Epic](https://gitlab.com/groups/gitlab-org/-/epics/7414)   |
-| Offer an opinionated view of user needs through user-centric roadmaps | [Justin Mandell](https://gitlab.com/jmandell) |  [Q1](https://gitlab.com/gitlab-org/gitlab-design/-/issues/1873), [Q2](https://gitlab.com/gitlab-org/gitlab-design/-/issues/1953), [Q3](https://gitlab.com/gitlab-org/gitlab-design/-/issues/2023), Q4     |
-| Solve customer problems broadly and in an integrated way with holistic iterations on high-usage workflows | [Marcel van Remmerden](https://gitlab.com/mvanremmerden) |  |
+| Goal | DRI | Links | Completion Status |
+| ---- | --- | ----- | ----------------- |
+| Improve product experience by implementing Actionable Insights | [Lauren Evans](https://gitlab.com/laurenevans)  |  [Epic](https://gitlab.com/groups/gitlab-org/-/epics/7367)    | Complete |
+| Build UXR subject matter expertise through a Foundational Research Framework | [Will Leidheiser](https://gitlab.com/wleidheiser) |  [Epic](https://gitlab.com/groups/gitlab-org/-/epics/7414)   | Complete |
+| Offer an opinionated view of user needs through user-centric roadmaps | [Justin Mandell](https://gitlab.com/jmandell) |  [Q1](https://gitlab.com/gitlab-org/gitlab-design/-/issues/1873), [Q2](https://gitlab.com/gitlab-org/gitlab-design/-/issues/1953), [Q3](https://gitlab.com/gitlab-org/gitlab-design/-/issues/2023), Q4     | Ongoing; significant progress made |
+| Solve customer problems broadly and in an integrated way with holistic iterations on high-usage workflows | [Marcel van Remmerden](https://gitlab.com/mvanremmerden) |  | Ongoing |
 
 **User experience:** Break down internal walls between physical, digital, and service design.
 
-| Goal | DRI | Links |
-| ---- | --- | ----- |
-| Enable Development to complete committed Pajamas migrations by establishing formal migration processes, supporting cross-functional communication, and completing accessibility audits | [Taurie Davis](https://gitlab.com/tauriedavis)  | [Migration process documentation MR](https://gitlab.com/gitlab-org/frontend/pajamas-adoption-scanner/-/merge_requests/48)      |
-| Reduce the amount of UX debt for an improved user experience across the product | [Valerie Karnes](https://gitlab.com/vkarnes) |       |
-| Elevate design quality by consistently providing constructive design feedback | [Blair Christopher](https://gitlab.com/badnewsblair)  | [Issue](https://gitlab.com/gitlab-org/gitlab-design/-/issues/2054)    |
-| Simplify Navigation so that it is intuitive across user personas | [Taurie Davis](https://gitlab.com/tauriedavis)   | [Q3 Navigation OKR](https://gitlab.com/groups/gitlab-org/-/epics/8481)      |
-| Identify customer pain points from process deficiencies through the creation of service blueprints | [Jacki Bauer](https://gitlab.com/jackib) |   [Issue](https://gitlab.com/gitlab-com/www-gitlab-com/-/issues/13056)    |
-| Increase designer's end-to-end product knowledge and exposure through MR reviews | [Valerie Karnes](https://gitlab.com/vkarnes) |  [MR](https://gitlab.com/gitlab-com/www-gitlab-com/-/merge_requests/101847)  |
+| Goal | DRI | Links | Completion Status |
+| ---- | --- | ----- | ----------------- |
+| Enable Development to complete committed Pajamas migrations by establishing formal migration processes, supporting cross-functional communication, and completing accessibility audits | [Taurie Davis](https://gitlab.com/tauriedavis)  | [Migration process documentation MR](https://gitlab.com/gitlab-org/frontend/pajamas-adoption-scanner/-/merge_requests/48)      | Complete |
+| Reduce the amount of UX debt for an improved user experience across the product | [Valerie Karnes](https://gitlab.com/vkarnes) |       | Ongoing; included in SUS-impacting metrics |
+| Elevate design quality by consistently providing constructive design feedback | [Blair Christopher](https://gitlab.com/badnewsblair)  | [Issue](https://gitlab.com/gitlab-org/gitlab-design/-/issues/2054)    | Complete |
+| Simplify Navigation so that it is intuitive across user personas | [Taurie Davis](https://gitlab.com/tauriedavis)   | [Q3 Navigation OKR](https://gitlab.com/groups/gitlab-org/-/epics/8481)      | Large progress in FY23, ongoing |
+| Identify customer pain points from process deficiencies through the creation of service blueprints | [Jacki Bauer](https://gitlab.com/jackib) |   [Issue](https://gitlab.com/gitlab-com/www-gitlab-com/-/issues/13056)    | Deprioritized |
+| Increase designer's end-to-end product knowledge and exposure through MR reviews | [Valerie Karnes](https://gitlab.com/vkarnes) |  [MR](https://gitlab.com/gitlab-com/www-gitlab-com/-/merge_requests/101847)  | Complete |
 
 ## Meet Some of Our Team Members
 
