Adds performance round table entry

--- a/development/dev/create/code-review/index.html.md.erb
+++ b/development/dev/create/code-review/index.html.md.erb
@@ -117,6 +117,12 @@ The agenda for this meeting is set in advance and anyone can contribute topics. 
 
 This meeting is focused on collaboration between UX and PM, though all are welcome to attend and contribute.
 
+#### Code Review Performance Round Table
+
+This meeting is for discussing new performance topics, project proposals, and ongoing performance work or concerns.
+
+The [catch-all issue](https://gitlab.com/gitlab-org/create-stage/-/issues/13110) includes the agenda, issue board, and goals. 
+
 ## Working with product
 
 Weekly calls between the product manager and engineering managers (frontend and backend) are listed in the "Code Review Group" calendar. Everyone is welcome to join and these calls are used to discuss any roadblocks, concerns, status updates, deliverables, or other thoughts that impact the group. Every 2 weeks (in the middle of a release), a [mid-milestone check-in](#middle-of-milestone-check-in) occurs, to report on the current status of ~"Deliverable"s. Monthly calls occurs under the same calendar where the entire group is encouraged to join, in order to highlight accomplishments/improvements, discuss future iterations, review retrospective concerns and action items, and any other general items that impact the group.
