Cleanse irrelevant in redirects.yml

--- a/alliances/index.html.md.erb
+++ b/alliances/index.html.md.erb
@@ -107,7 +107,7 @@ Sales & Marketing
 
 **Alliance Partner Onboarding**
 
-If you are interested in becoming a GitLab Alliance Partner, you can learn more on our [Alliance Partner Onboarding](https://about.gitlab.com/partners/integrate) page.
+If you are interested in becoming a GitLab Alliance Partner, you can learn more on our [Alliance Partner Onboarding](https://about.gitlab.com/partners/technology-partners/integrate/) page.
 
 **License Requests**
 
