Add new directions about taking time off for weekend shifts

--- a/infrastructure/incident-management/incident-manager-onboarding/index.html.md.erb
+++ b/infrastructure/incident-management/incident-manager-onboarding/index.html.md.erb
@@ -109,9 +109,22 @@ When an Incident Manager shift includes a weekend the team member can shift thei
 
 While the example above is the intended idea, we will note that anything close to that which works for the team member will be fine as well.  For example, if you'd much rather take some other day in the adjoining weeks, or working [non-linear workdays](https://about.gitlab.com/company/culture/all-remote/non-linear-workday/) to accomodate the shift.
 
+Example scenarios: 
+1. Tanuki is scheduled for the Thursday-Sunday IM shift. 
+   * They do what they usually do on Monday during Saturday shift and take Monday off. 
+   * During the Sunday shift they stay home to play with their daughters. They finished their days earlier this week to rest, but also considered taking half of Friday off that week.
+1. Tanuki is scheduled for the Friday-Monday IM shift. Knowing that the week after the shift will be very busy, they take Thursday before the shift off. They spend the weekend decluttering the basement where their phone is in ears reach.
+
 Two things that won't work:
 1. "carrying" the day for some longer time in the future as if it is an accrued vacation time (because it isn't).
 2. Allowing your typical worked time to become longer. Fulfilling an Incident Manager shift should not result in adding total hours to your work week, but in some cases (weekends & holidays) it may ask that you shift those hours.
+
+#### My direct report is serving as Incident Manager. What are my responsibilites as their manager? 
+
+Adding IM responsibilities to a direct report's role requires cooperation with their manager. The manager should support them when they are assigned IM duties, particularly
+when shifts overlap with weekends. Please make sure IMs are empowered to delegate, postpone or drop some responsibilities given these additional responsibilities.
+
+If the manager serves as an IM themselves as well, modelling similar behaviour is as vital as supporting their direct reports.
 
 #### How do I see PagerDuty schedules from Google Calendar?
 
