HR Savvy to receive contract via DocuSign

--- a/people-group/contracts-probation-periods/index.html.md.erb
+++ b/people-group/contracts-probation-periods/index.html.md.erb
@@ -427,7 +427,7 @@ When renewing a contract, if it is to be for 12 months, the timeframes are at be
 1. The People Connect Team member will check the [Netherlands Renewal tracker](https://docs.google.com/spreadsheets/d/1Z45eOZ2rCRIKgGae3eOKQ8lhIbAPikSs5gLz3V8Kh9U/edit#gid=84302455) in Google Drive to see if any previous action has been taken or check for notes for the specific team member. 
 1. If a salary increase is required due to updated [visa salary requirements](/handbook/people-group/visas/#right-to-immigrate-to-the-netherlands) the People Connect Team member requests approvals from the team member's manager, total rewards and finally the team member's Division's E-Group leader.
 1. The People Connect Team member uploads the approval to Workday Documents folder.
-1. If the contract extension is approved, the People Connect Team member creates the contract and stages it via Docusign for the team member and Senior Director, People Success (on behalf of CPO if there is no current CPO) to sign.
+1. If the contract extension is approved, the People Connect Team member creates the contract and stages it via Docusign for the team member and [GitLab signatory](https://about.gitlab.com/handbook/hiring/talent-acquisition-framework/ces-contract-processes/#entity-contract-signatories) to sign. Add hr@savvy-group.eu to 'Receive a copy' once signed.
 - Do not keep the `Stock Options` line in the Key Terms section, unless additional shares are being given.
 - Be sure to write both the Start date and Birth date of the team member in the **Month DD, YYYY** format to prevent confusion.
 - Check whether the team member is currently paid the holiday allowance monthly. If yes, confirm with the team member whether we can update to yearly. If the team member agrees to update, ensure to update pay frequency. If no, confirm okay with Legal - Employment and ensure to add correct wording to this effect in new contract. To streamline the process all team members should receive the holiday allowance yearly.
@@ -435,10 +435,6 @@ When renewing a contract, if it is to be for 12 months, the timeframes are at be
 - Note: A second [probation period](/handbook/people-group/contracts-probation-periods/#probation-period) should only be implemented if the team member's new contract reflects the start of an [entirely new role](https://wsadvocaten.nl/probationary-period-netherlands-dutch-law/). If the contract is simply a continuation of employment in the current role, a second probation period should not be applied.
 - Remove any wording regarding certificate of good conduct, as this was already requested as part of their first Netherlands contract.
 1. The People Connect Team member uploads the signed contract to the team members Workday Documents folder.
-1. The People Connect Team member will then password-protect the signed contract and email it to hr@savvy-group.eu.
-- To password protect on MAC: Download the document > open finder > right click > open with > preview
-- Click: file (top of your screen) > export as pdf > click: show details > tick: encrypt 
-- Password: {{add new password}} > save
 1. The People Connect Team member updates Workday to reflect the new contract: Open the team member's Workday profile > Click on actions > Job Change > add contract. Fill in start and end date, contract type and reason (if applicable)
 1. Notify another People Connect Team member so that they may audit any Workday changes.
 
