Remove internal redirect

--- a/culture/all-remote/management/index.html.md.erb
+++ b/culture/all-remote/management/index.html.md.erb
@@ -247,7 +247,7 @@ Learn more about GitLab's approach to asynchronous working by viewing our [Effic
 
 Paralysis by analysis is something all companies should seek to avoid. In managing through this at an all-remote company, leaders should ensure that all colleagues understand that consensus doesn't scale.
 
-Thus, there should be [no goal to achieve consensus](/handbook/general-guidelines/#getting-things-done). This may feel awkward or unnatural to those coming from colocated corporate environments, but trusting decision makers and living out [the value of iteration](/handbook/values/#iteration) prevents unnecessary slowdowns in your organization.
+Thus, there should be [no goal to achieve consensus](/handbook/). This may feel awkward or unnatural to those coming from colocated corporate environments, but trusting decision makers and living out [the value of iteration](/handbook/values/#iteration) prevents unnecessary slowdowns in your organization.
 
 By intentionally separating the process of decision *gathering* and decision *making*, you provide ample opportunity for everyone to add input, offering up fresh angles for consideration that may well sway the mind of the DRI ([directly responsible individual](/handbook/people-group/directly-responsible-individuals/)).
 
