--- a/culture/all-remote/phases-of-remote-adaptation/index.html.md.erb
+++ b/culture/all-remote/phases-of-remote-adaptation/index.html.md.erb
@@ -172,7 +172,7 @@ An organization's ability to transition quickly from Phase 1 to Phase 3 is depen
 
 * Do team members have a preexisting understanding of [digital communication tools](/handbook/communication/)?
 * Do team members have preexisting methods of accessing sensitive information (e.g. established VPN protocols)?
-* Does a company's [business operations](/handbook/business-ops/) or IT department have preexisting protocols for enabling team members from locales outside of the office?
+* Does a company's [business operations](/handbook/business-technology/) or IT department have preexisting protocols for enabling team members from locales outside of the office?
 * Does a company have preexisting documentation for core company processes ([communication](/handbook/communication/), client service expectations, socializing and relationship building, onboarding, [in-person interactions](/company/culture/all-remote/in-person/), [expensing](/handbook/spending-company-money/), working hours, [metrics and goals](/company/okrs/), owners/[DRIs](/handbook/people-group/directly-responsible-individuals/), etc.)
 
 ## GitLab Knowledge Assessment: Phases of Remote Adaptation
