Made updates to Board Page Dates

--- a/board-meetings/index.html.md.erb
+++ b/board-meetings/index.html.md.erb
@@ -134,10 +134,10 @@ The board meeting is [all remote](/company/culture/all-remote/) because hybrid i
 1. Meetings are scheduled on/around the Thursday 6 weeks after the end of the quarter, assuming availability of the Directors.
 1. The 2022 schedule of Board meetings is as follows:
 
-- 2022-03-22
-- 2022-06-17
-- 2022-09-15
-- 2022-12-13
+- 2023-03-30
+- 2023-06-29
+- 2023-09-28
+- 2023-12-14 
 
 The Staff EBA to the CEO shall ensure that there are separate calendar invites for all attendees within each session, all including exact session start and end times, the appropriate Zoom link, and links to the agenda document. Any supplemental materials are required to be linked in the agenda document for each session:
 
@@ -284,6 +284,7 @@ Past and future Key Talent Dinner Guests are listed below.
 | 2021-09-29 | [David DeSanto](https://gitlab.com/david) |
 | 2021-12-13 | [Sherrod Patching](https://gitlab.com/users/spatching) |
 | 2022-03-21 | [Christine Lee](https://gitlab.com/christinelee) | 
+| 2022-12-12 | [Sherida McMullan](https://gitlab.com/sheridam) | 
 
 ## Board Recaps
 
