Manage: Update meeting table

--- a/development/dev/manage/index.html.md.erb
+++ b/development/dev/manage/index.html.md.erb
@@ -218,7 +218,8 @@ Although we have a bias for asynchronous communication, synchronous meetings are
 
 | Frequency | Meeting                              | DRI         | Possible topics                                                                                        |
 |-----------|--------------------------------------|-------------|--------------------------------------------------------------------------------------------------------|
-| Monthly   | Stage-level social call              | @dennis     | Getting to know each other                                                                             |
+| Every other Monday | Engineering managers discussion | @m_gill | Ideas, help or resources needed from others, concerns, questions, etc.                                 |
+| Monthly   | Stage-level social call              | @mksionek     | Getting to know each other                                                                             |
 
 
 For one-off, topic specific meetings, please always consider recording these calls and sharing them (or taking notes in a [publicly available document](https://docs.google.com/document/d/1kE8udlwjAiMjZW4p1yARUPNmBgHYReK4Ks5xOJW6Tdw/edit)).
