Added remote.com relocation process

--- a/people-group/relocation/index.html.md.erb
+++ b/people-group/relocation/index.html.md.erb
@@ -311,6 +311,11 @@ In addition to the relocation process complete the following steps:
 1. Upload the signed document to the team member's Contracts & Changes folder in Workday.
 1. Email nonuspayroll@ gitlab.com to notify them of any owed payments in lieu of accrued but unused holiday entitlements
 
+#### PEO remote.com
+Any team members that relocate to a country where we utilize the [PEO](https://about.gitlab.com/handbook/people-group/employment-solutions/#peo-professional-employer-organization-employer-of-record-and-not-a-gitlab-entity-or-branch) remote.com need to get added as a new hire through their [dashboard](https://employ.remote.com/dashboard).
+1. Log into their [dashboard](https://employ.remote.com/dashboard) with the log in details found in the 1password people connect vault
+1. Click on Onboarding > 'Add new hire' > fill in the details as agreed during reocation process
+1. Send an email to our Customer Success Manager at remote.com (see contact details in 1password) to waive the probationary period due to the relocation, as their dashboard currently doesn't have this option
 
 ## Reporting for Relocations
 Access to to the 'Gitlab Team Member Relocations' Workday report can get requested via [this issue](https://gitlab.com/gitlab-com/people-group/people-tools-technology/general/issues/new?issuable_template=intake) and automatically sent on a regular basis. 
