Update breaking changes milestone example

--- a/product/gitlab-the-product/index.html.md.erb
+++ b/product/gitlab-the-product/index.html.md.erb
@@ -168,7 +168,7 @@ https://docs.gitlab.com/ee/development/deprecation_guidelines/index.html#termino
 
 **As soon as possible, but no later than the third milestone preceding intended removal:**
 
-For example, if the intended removal milestone is `15.0`, given the following release schedule: `14.8, 14.9, 14.10, 15.0` – `14.8` is the third milestone preceding intended removal.
+_For example, if the intended removal milestone is `16.0`, given the following release schedule: `15.9, 15.10, 15.11, 16.0`, then `15.9` is the third milestone preceding intended removal._
 
 1. Make sure the deprecation has an issue leveraging the [deprecation issue template](https://gitlab.com/gitlab-org/gitlab/-/blob/master/.gitlab/issue_templates/Deprecations.md). 
     - Leveraging this template to create a deprecation issue is required because it serves as the SSOT/communication cross-functionally and across other stable counterparts, such as CSMs and Marketing, who need awareness of upcoming removals.
