Added verbiage for missed criteria

--- a/development/ops/verify/pipeline-authoring/index.html.md.erb
+++ b/development/ops/verify/pipeline-authoring/index.html.md.erb
@@ -224,6 +224,13 @@ end
 Prioritization
 ```
 
+#### "What if I pick an issue late in a milestone, but it misses the current milestone?"
+
+As we get closer to the end of the milestone, there might not be enough time to complete some of the picked issues.
+If an issue misses the milestone, it is automatically assigned the `missed` label, but the label can be removed if
+the issue was originally targeting a later milestone. Be sure to leave a comment explaining why the label was removed.
+Additionally, if the team member is confident it will make the next milestone, they can update the milestone to match, even if it has not started yet.
+
 #### Monthly issue progress update
 
 We use the [Issue Health Status feature](https://docs.gitlab.com/ee/user/project/issues/#health-status) to indicate the probability that an issue will ship in the assigned milestone.
