Removed an abandoned UX PI and added a comment to the yml page

--- a/product/ux/performance-indicators/index.html.md.erb
+++ b/product/ux/performance-indicators/index.html.md.erb
@@ -11,3 +11,5 @@ description: "Performance indicators for the UX department at GitLab"
 {:toc .hidden-md .hidden-lg}
 
 <%= performance_indicators('UX Department') %>
+
+<!-- To adjust the content on this page, you'll need to go to the accompanying yml page.  To find that, go to: www-gitlab-com - data - performance indicators - ux_department.yml-->
