Update handbook and pi ownership

--- a/quality/index.html.md.erb
+++ b/quality/index.html.md.erb
@@ -405,14 +405,14 @@ If additional input is needed from the Quality team, the DRI for this is the Dir
 
 | Recurring event | Primary DRI | Backup DRI | Cadence | Format |
 | --------------- | ----------- | ---------- | ------- | ------ |
-| Quality Key Review | `@meks` | `@nick_vh` <br>`@tpazitny` | Every 8 weeks | Review meeting |
-| Group conversation | `@meks` | `@at.ramya` <br>`@tpazitny` <br>`@nick_vh` <br>`@jo_shih` <br>`@vincywilson` | Every 8 weeks | [Group Conversations](#group-conversations) |
-| [GitLab SaaS Infrastructure Weekly](/handbook/engineering/infrastructure/#gitlab-saas-infrastructure) | Rotates between `@jo_shih` <br>`@vincywilson` | `@tpazitny` | Weekly | Incident review and corrective action tracking |
+| Quality Key Review | `@meks` | `@nick_vh` <br>`@vincywilson` | Every 8 weeks | Review meeting |
+| Group conversation | `@meks` | `@at.ramya` <br>`@vincywilson` <br>`@nick_vh` <br>`@jo_shih` <br>`@vincywilson` | Every 8 weeks | [Group Conversations](#group-conversations) |
+| [GitLab SaaS Infrastructure Weekly](/handbook/engineering/infrastructure/#gitlab-saas-infrastructure) | Rotates between `@jo_shih` <br>`@vincywilson` | `@vincywilson` | Weekly | Incident review and corrective action tracking |
 | [Incident management](/handbook/engineering/infrastructure/incident-management/) | Rotates between `@jo_shih`, `@at.ramya`, and `@vincywilson` | All managers | Weekly | Incident monitoring, response, and management as needed to represent Quality |
-| [Self-managed environment triage](/handbook/engineering/quality/quality-engineering/enablement-saas-platforms-qe-team/#self-managed-environment-triage) | `@tpazitny` | `@vincywilson` | Every 2 weeks | Sync stand-up |
+| [Self-managed environment triage](/handbook/engineering/quality/quality-engineering/enablement-saas-platforms-qe-team/#self-managed-environment-triage) | `@vincywilson` | `@vincywilson` | Every 2 weeks | Sync stand-up |
 | [Bug refinement](/handbook/engineering/quality/#bug-refinement) | Rotates between `@at.ramya` <br>`@jo_shih` <br>`@vincywilson` | Weekly | Review meeting |
 | Security Vulnerability review | `@meks` | `TBD` | Every 4 weeks | Review meeting |
-| Quality Department Leadership | `@meks` | `TBD` | Weekly | Review meeting |
+| Quality Department Staff Meeting | `@meks` | `TBD` | Weekly | Review meeting |
 | Quality Department Bi-Weekly | Department management team | `@meks` | Every 2 weeks | Review meeting |
 | Quality Department Social Call | All team members | All team members | Every 2 weeks | Meet and Greet |
 | Quality Hiring Bi-Weekly | All QEMs, Directors, and VP | `TBD` | Every 2 weeks | Review meeting |
